src/test/deca/syntax/invalid/sansObjet/BadPrintln5.deca
{
    println(""Hello 2020");
}